--- a/kadry/src/main/webapp/pracownikurlopy/sub/urlopy.xhtml
+++ b/kadry/src/main/webapp/pracownikurlopy/sub/urlopy.xhtml
@@ -6,7 +6,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     >
     <p:panelGrid columns="1" style="padding: 20px;">
-        <h:outputText value="Wprowadzamy dane na rok przejęcia firmy z pracownikami" style="color: blue;"/>
+        <h:outputText value="Wprowadzamy dane na rok przejęcia firmy z pracownikami do naszego programu!" style="color: red;"/>
     </p:panelGrid>
      <p:panelGrid columns="1" columnClasses="twenty-percent, eighty-percent" style="height: 300px;width: 900px;">
         <p:outputPanel>
