naprawy i potracenie komornicze z wyplaty zasilku

--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -887,7 +887,7 @@
                         <p:outputLabel value="limit podstawy świadczeń chorobowych"/>
                         <bcf:inputplid id="pstawka3" value="#{wynagrodzenieMinimalneView.selected.limitswiadczenchorobowych}"/>
                         <p:outputLabel value="limit zajęcia zasiłki"/>
-                        <bcf:inputplid id="pstawka3" value="#{wynagrodzenieMinimalneView.selected.limitzajeciazasilki}"/>
+                        <bcf:inputplid id="pstawka3z" value="#{wynagrodzenieMinimalneView.selected.limitzajeciazasilki}"/>
                         <p:outputLabel value="data od" for="dataode" />
                         <p:inputText id="dataode" value="#{wynagrodzenieMinimalneView.selected.dataod}" title="data od" placeholder="____-__-__"  required="true"/>
                         <p:outputLabel value="data do" for="datadoe" />
