przbudowa entity konto pozdro z sitges - zimny maj 2024

--- a/npkpir_23/web/manager/sub/tablica.xhtml
+++ b/npkpir_23/web/manager/sub/tablica.xhtml
@@ -335,7 +335,8 @@
 <!--        <p:commandButton value="naprawfaktury" actionListener="#{fakturaView.zrobfakt()}"/>-->
 <!--     <p:commandButton value="okresowe podid" actionListener="#{fakturaView.okresowepodid()}"/>-->-->
 <!--    <p:commandButton value="zus pobierz" actionListener="#{draPlatnikTimer.autozus  ()}"/>-->-->
-    <p:commandButton value="remanent" actionListener="#{remanentView.tworzremanent()}"/>-->
+<!--    <p:commandButton value="remanent" actionListener="#{remanentView.tworzremanent()}"/>-->-->
+     <p:commandButton value="przenies konta" actionListener="#{remanentView.przenieskonta()}"/>-->
 <!--    <h:form>
     <p:commandButton value="Export as PDF" ajax="false" >
 <p:dataExporter type="pdf" target="klienci" fileName="adresy"/>
