--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_syntetyczne_wzorcowy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_syntetyczne_wzorcowy.xhtml
@@ -25,13 +25,19 @@
                         <f:selectItem itemLabel="bilansowe" itemValue="bilansowe"/>
                         <f:selectItem itemLabel="wynikowe" itemValue="wynikowe"/>
                     </p:selectOneMenu>
-                    <h:outputLabel value="Zwyklerozrachszczegolne:" for="zwyklerozrachszczegolne" />
+<!--                    <h:outputLabel value="Zwyklerozrachszczegolne:" for="zwyklerozrachszczegolne" />
                     <p:selectOneMenu id="zwyklerozrachszczegolne" value="#{planKontView.noweKonto.zwyklerozrachszczegolne}" required="true" requiredMessage="The Zwyklerozrachszczegolne field is required." style="width: 170px;">
                         <f:selectItem itemLabel="zwykłe" itemValue="zwykłe"/>
                         <f:selectItem itemLabel="rozrachunkowe" itemValue="rozrachunkowe"/>
                         <f:selectItem itemLabel="szczególne" itemValue="szczególne"/>
                         <f:selectItem itemLabel="#{mgs.VAT}" itemValue="#{mgs.VAT}"/>
-                    </p:selectOneMenu>
+                    </p:selectOneMenu>-->
+                    <h:outputLabel value="Saldo dwustronne" for="zwyklerozrachszczegolne" />
+                     <p:selectBooleanCheckbox id="zwyklerozrachszczegolne" value="#{planKontView.noweKonto.dwasalda}" />
+                      <h:outputLabel value="Rozrachunkowe" for="rozrachunkowe" />
+                     <p:selectBooleanCheckbox id="rozrachunkowe" value="#{planKontView.noweKonto.rozrachunkowe}" />
+                      <h:outputLabel value="Konto vat" for="kontovat" />
+                     <p:selectBooleanCheckbox id="kontovat" value="#{planKontView.noweKonto.kontovat}" />
                     <h:outputText value=""/>
                     <p:commandButton value="dodaj" actionListener="#{planKontView.dodajsyntetyczne()}" accesskey="d" type="submit" 
                                      style="float: right; width: 120px;" onclick="PF('nowekontosyntetyczne').hide()" update=":formX, @form, :formwzorcowy">
