--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
@@ -137,7 +137,7 @@
                         <h:outputText value="#{loop.pelnynumer}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '2' ? true : false)}" style="margin-left: 20px;"/> 
                         <h:outputText value="#{loop.pelnynumer}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '3' ? true : false)}" style="margin-left: 30px;"/> 
                     </p:column>
-                    <p:column headerText="nazwa pełna" style="width: 300px;">
+                    <p:column headerText="nazwa pełna" style="width: 300px;" filterBy="#{loop.nazwapelna}" filterMatchMode="contains">
                         <h:outputText id="nazwapelna" value="#{loop.nazwapelna}" /> 
                         <h:outputText value=" id " rendered="#{loop.idslownika gt 0}"/> 
                         <h:outputText value="#{loop.idslownika}" rendered="#{loop.idslownika gt 0}"/> 
@@ -159,6 +159,15 @@
                     </p:column>
                     <p:column headerText="zwykle rozrach szczegolne" style="width: 70px; text-align: center;">
                         <h:outputText value="#{loop.zwyklerozrachszczegolne.length() gt 4 ? loop.zwyklerozrachszczegolne.substring(0,4) : loop.zwyklerozrachszczegolne}" style="text-align: center;"/>
+                    </p:column>
+                     <p:column headerText="dwa salda" style="width: 40px; text-align: center;">
+                         <h:outputText value="&#x2713;" rendered="#{loop.dwasalda eq true}" style="color: green;"/>
+                    </p:column>
+                    <p:column headerText="rorach." style="width: 40px; text-align: center;">
+                        <h:outputText value="&#x2713;" rendered="#{loop.rozrachunkowe eq true}" style="color: green;"/>
+                    </p:column>
+                      <p:column headerText="vat" style="width: 40px; text-align: center;">
+                        <h:outputText value="&#x2713;" rendered="#{loop.kontovat eq true}" style="color: green;"/>
                     </p:column>
 <!--                    <p:column headerText="poziom" style="width: 50px; text-align: center;">
                         <h:outputText value="#{loop.level}" /> 
