--- a/npkpir_23/web/indexFK.xhtml
+++ b/npkpir_23/web/indexFK.xhtml
@@ -17,12 +17,12 @@
                     <ui:include src="sub/layout/south.xhtml"/>   <!-- panel poludniowy-->
                     <p:layoutUnit position="center" >
                         <ui:include src="sub/wyborpodatnikaFK.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                        <p:outputPanel rendered="#{WpisView.niegosc}">
+<!--                        <p:outputPanel rendered="#{WpisView.niegosc}">
                         <ui:include src="sub/kalendarz.xhtml"/>
                         <ui:include src="sub/dialog_sprawy.xhtml"/>
                         <ui:include src="sub/dialog_nowasprawa.xhtml"/> 
                         </p:outputPanel>
-                    </p:layoutUnit>
+                    </p:layoutUnit>-->
                 </p:layout>
             </f:view>
         </ui:define>
