--- a/npkpir_23/web/nowehaslo.xhtml
+++ b/npkpir_23/web/nowehaslo.xhtml
@@ -12,6 +12,7 @@
             <meta http-equiv="Accept-Encoding" content="gzip"/>
             <meta http-equiv="Expires" content="0" />
             <meta http-equiv="Cache-Control" content="no-cache,no-store,must-revalidate"/>
+            <h:outputStylesheet id="template" name="css/style.css"/>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
         <title>Nowe hasło</title>
     </h:head>
@@ -29,7 +30,7 @@
                 </p:panel>
                 <p:panel style="text-align: center; margin-left: auto; margin-right: auto; margin-top:  4%;  width: 450px">
                     <f:facet name="header">
-                    <h:outputLabel value="Prosze podać wybrane nowe hasło do logowania"/>
+                    <h:outputLabel value="Prosze podać własne nowe hasło do logowania. Po zapisaniu hasła program przeniesie się do strony logowania"/>
                     </f:facet>
                     <p:focus id="focus" context="rejestrowaniepanel"/>
                     <p:panelGrid id="rejestrowaniepanel" columns="2" style="text-align: center; margin-left: auto; margin-right: auto;">
