--- a/npkpir_23/web/nowehaslo.xhtml
+++ b/npkpir_23/web/nowehaslo.xhtml
@@ -34,8 +34,8 @@
                     </f:facet>
                     <p:focus id="focus" context="rejestrowaniepanel"/>
                     <p:panelGrid id="rejestrowaniepanel" columns="2" style="text-align: center; margin-left: auto; margin-right: auto;">
-                        <h:outputText value="login"/>
-                        <h:inputText value="#{UzView.login}" required="true" requiredMessage="Wpisz login!" autocomplete="true"/>
+<!--                        <h:outputText value="login"/>
+                        <h:inputText value="#{UzView.login}" required="true" requiredMessage="Wpisz login!" autocomplete="true"/>-->
                         <h:outputText value="nowe hasło"/>
                         <h:inputSecret id="haslo" value="#{UzView.firstPassword}" required="true" requiredMessage="Wpisz hasło!" autocomplete="true">
                             <f:validateLength minimum="6"/>
