dezaktywacja podatnika rozracbunki

--- a/npkpir_23/web/indexFK.xhtml
+++ b/npkpir_23/web/indexFK.xhtml
@@ -21,8 +21,8 @@
                         <ui:include src="sub/kalendarz.xhtml"/>
                         <ui:include src="sub/dialog_sprawy.xhtml"/>
                         <ui:include src="sub/dialog_nowasprawa.xhtml"/> 
-                        </p:outputPanel>
-                    </p:layoutUnit>-->
+                        </p:outputPanel>-->
+                    </p:layoutUnit>
                 </p:layout>
             </f:view>
         </ui:define>
