naprawa import amazon vintos  pusta kolumna z kodem towaru

--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazon_intrastat.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazon_intrastat.xhtml
@@ -50,7 +50,7 @@
                 <p:column headerText="wiersz" style="width: 350px;">
                     <h:outputText value="#{itemikjpk.numerkolejny}"/>
                 </p:column>
-                <p:column headerText="kod">
+                <p:column headerText="kod" sortBy="#{itemikjpk.kodtowaru}" filterBy="#{itemikjpk.kodtowaru}" filterMatchMode="startsWidth">
                     <h:outputText value="#{itemikjpk.kodtowaru}"/>
                 </p:column>
                 <p:column headerText="waga" width="50">
