naprawy domowe sitges ostatni weekend maj 2024. toaleta xD

--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_3.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_3.xhtml
@@ -73,7 +73,7 @@
             </p:panelGrid>
             
             <p:dataTable id="dokumentyOkresowe" value="#{fakturaView.fakturyokresowe}" var="wpis"  rowIndexVar="row"  filteredValue="#{fakturaView.fakturyokresoweFiltered}" 
-                         rowKey="#{wpis.hashCode()}" style="max-width: 1200px;" widgetVar="okresTable2" sortBy="#{wpis.dokument.kontrahent.nazwabezCudzy}" sortOrder="ascending"
+                         rowKey="#{wpis.hashCode()}" style="max-width: 1200px;height: 900px;overflow-y: scroll;" widgetVar="okresTable2" sortBy="#{wpis.dokument.kontrahent.nazwabezCudzy}" sortOrder="ascending"
                          rowsPerPageTemplate="40,120,250,500" paginatorPosition="top" paginator="true" rows="40"
                          >
                 
