--- a/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
@@ -45,7 +45,7 @@
                 <p:commandButton value="drukuj zestawienie" actionListener="#{fakturaView.drukujfakturyarchiwum}" style="width: 150px; margin-left: 30px;" rendered="#{WpisView.biuroiszef eq true}"/>
             </p:panel>
             <p:dataTable id="dokumentyArchiwum" value="#{fakturaView.fakturyarchiwum}" var="wpis"  rowIndexVar="row"  filteredValue="#{fakturaView.fakturyFilteredarchiwum}"
-                         selection="#{fakturaView.gosciwybralarchiuwm}" rowKey="#{wpis.numerkolejny}" widgetVar="archTable" rowSelectMode="add" style="max-width: 1400px;"
+                         selection="#{fakturaView.gosciwybralarchiuwm}" rowKey="#{wpis.numerkolejny}" widgetVar="archTable" rowSelectMode="add" style="max-width: 1400px;height: 900px;overflow-y: scroll;"
                          sortBy="#{wpis.numerkolejny}" sortFunction="#{fakturaView.sortZaksiegowaneFaktury}"
                          emptyMessage="Nie ma wygenerowanych i zaksięgowanych faktur w tym miesiącu" >
                 <p:ajax event="filter" global="false"/>
