--- a/npkpir_23/web/manager/sub/nowepodmioty.xhtml
+++ b/npkpir_23/web/manager/sub/nowepodmioty.xhtml
@@ -19,10 +19,9 @@
 
         <h:form id="form">
             <!--    panel wpisywania osoby fizycznej-->
-            <p:panel header="Wybierz nową firmę do edycji" style="width: 500px;"/>
+            <p:panel header="Wykaz nowych podmiotów do uzupełnienia" style="width: 500px;"/>
             <h:selectOneListbox id="podatnikWpisu" value="#{podatnikView.selectedDodedycja}" style="width: 350px; height: 150px;" converter="#{podatConv}" >
-                <f:selectItem itemLabel="wybierz podatnika" itemValue="" noSelectionOption="true"/>
-                <f:selectItems value="#{podatnikWyborView.listaPodatnikowNowi}" var="p" itemLabel="#{p.printnazwa}" itemValue="#{p}"/>
+              <f:selectItems value="#{podatnikWyborView.listaPodatnikowNowi}" var="p" itemLabel="#{p.printnazwa}" itemValue="#{p}"/>
                 <p:ajax event="change"  update=":formdod2" global="false" listener="#{podatnikView.skopiujdoedycji}"/>
             </h:selectOneListbox>
         </h:form>
