--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
@@ -10,145 +10,145 @@
     <p:outputPanel style="margin-top: 10px;">
         <h:form styleClass="formumowa" id="UmowaListFormFunkcja">
             <p:panel header="Wykaz umów o pełnienie funkcji / Gdy jest pusta sprawdź w parametrach przyporządkowanie kodu do umowy">
-                <p:dataTable id="datalist" value="#{umowaView.listafunkcja}" var="itemumowa" widgetVar="dataListumowafunkcja"
-                             selection="#{umowaView.selectedlista}" emptyMessage="Brak zawartych umów"
-                             rowKey="#{itemumowa.id}" sortBy="#{itemumowa.dataod}" sortMode="single"
+                <p:dataTable id="datalist" value="#{umowaView.listafunkcja}" var="itemumowafunkcja" widgetVar="dataListumowafunkcja"
+                             selection="#{umowaView.selectedlistafumkcja}" emptyMessage="Brak zawartych umów"
+                             rowKey="#{itemumowafunkcja.id}" sortBy="#{itemumowafunkcja.dataod}" sortMode="single"
                              style="height: 220px; overflow-y: scroll; width: 1700px;"
                              >
-                    <p:ajax event="rowSelect" listener="#{umowaView.aktywuj}" partialSubmit="true" global="false" update="north, @(form)"/>
-                    <p:ajax event="rowSelectRadio" listener="#{umowaView.aktywuj}" partialSubmit="true" global="false" update="north, @(form)"/>
+                    <p:ajax event="rowSelect" listener="#{umowaView.aktywujfunkcja}" partialSubmit="true" global="false" update="north, @(form)"/>
+                    <p:ajax event="rowSelectRadio" listener="#{umowaView.aktywujfunkcja}" partialSubmit="true" global="false" update="north, @(form)"/>
                     <p:column width="40" selectionMode="single" selectRow="true" style="text-align: center;"/>
                     <!--                         <p:column>
                                                 <f:facet name="header">
                                                     <h:outputText value="angaz"/>
                                                 </f:facet>
-                                                 <h:outputText value="#{itemumowa.angaz.pracownik.nazwiskoImie}" style="color: #{itemumowa.aktywna eq true ? 'green':'initial'}"/>
+                                                 <h:outputText value="#{itemumowafunkcja.angaz.pracownik.nazwiskoImie}" style="color: #{itemumowafunkcja.aktywna eq true ? 'green':'initial'}"/>
                                             </p:column>-->            <p:column width="100">
                         <f:facet name="header">
                             <h:outputText value="umowa"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.slownikszkolazatrhistoria.opis}" style="color: #{itemumowa.aktywna eq true ? 'green':'initial'}"/>
+                        <h:outputText value="#{itemumowafunkcja.slownikszkolazatrhistoria.opis}" style="color: #{itemumowafunkcja.aktywna eq true ? 'green':'initial'}"/>
                     </p:column>
                     <p:column width="200">
                         <f:facet name="header">
                             <h:outputText value="rodzaj umowy ZUS"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.umowakodzus.opiswybor}" style="color: #{itemumowa.aktywna eq true ? 'green':'initial'}"/>
+                        <h:outputText value="#{itemumowafunkcja.umowakodzus.opiswybor}" style="color: #{itemumowafunkcja.aktywna eq true ? 'green':'initial'}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="numer"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.nrkolejny}" style="color: #{itemumowa.aktywna eq true ? 'green':'initial'}"/>
+                        <h:outputText value="#{itemumowafunkcja.nrkolejny}" style="color: #{itemumowafunkcja.aktywna eq true ? 'green':'initial'}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="odliczac ulge pod."/>
                         </f:facet>
-                        <h:outputText value="&#x2714;" rendered="#{itemumowa.angaz.odliczaculgepodatkowa eq true}" style="color: #{itemumowa.aktywna eq true ? 'green':'initial'}"/>
+                        <h:outputText value="&#x2714;" rendered="#{itemumowafunkcja.angaz.odliczaculgepodatkowa eq true}" style="color: #{itemumowafunkcja.aktywna eq true ? 'green':'initial'}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="chor."/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.chorobowe eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.chorobowe eq true}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="chor. dobr."/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.chorobowedobrowolne eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.chorobowedobrowolne eq true}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="emeryt."/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.emerytalne eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.emerytalne eq true}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="bez FGSP"/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.nieliczFGSP eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.nieliczFGSP eq true}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="bez FP"/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.nieliczFP eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.nieliczFP eq true}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="rent."/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.rentowe eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.rentowe eq true}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="wypad."/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.wypadkowe eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.wypadkowe eq true}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="zdrow."/>
                         </f:facet>
-                        <h:outputText value="&#x2714;"  rendered="#{itemumowa.zdrowotne eq true}"/>
+                        <h:outputText value="&#x2714;"  rendered="#{itemumowafunkcja.zdrowotne eq true}"/>
                     </p:column>
-                    <p:column style="text-align: center;color: #{itemumowa.aktywna eq true ? 'green':'initial'}" sortOrder="desc" sortBy="#{itemumowa.dataod}">
+                    <p:column style="text-align: center;color: #{itemumowafunkcja.aktywna eq true ? 'green':'initial'}" sortOrder="desc" sortBy="#{itemumowafunkcja.dataod}">
                         <f:facet name="header">
                             <h:outputText value="data od"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.dataod}"/>
+                        <h:outputText value="#{itemumowafunkcja.dataod}"/>
                     </p:column>
-                    <p:column style="text-align: center;color: #{itemumowa.aktywna eq true ? 'green':'initial'}">
+                    <p:column style="text-align: center;color: #{itemumowafunkcja.aktywna eq true ? 'green':'initial'}">
                         <f:facet name="header">
                             <h:outputText value="data do"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.datado}"/>
+                        <h:outputText value="#{itemumowafunkcja.datado}"/>
                     </p:column>
 
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="zas. chor. od "/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.pierwszydzienzasilku}"/>
+                        <h:outputText value="#{itemumowafunkcja.pierwszydzienzasilku}"/>
                     </p:column>
 <!--                    <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="koszty uzyskania"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.kosztyuzyskaniaprocent}"/>
+                        <h:outputText value="#{itemumowafunkcja.kosztyuzyskaniaprocent}"/>
                     </p:column>-->
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="kod ubezpieczenia"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.umowakodzus.kod}"/>
+                        <h:outputText value="#{itemumowafunkcja.umowakodzus.kod}"/>
                     </p:column>
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="kod zawodu"/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.kodzawodu.symbolkzis}"/>
+                        <h:outputText value="#{itemumowafunkcja.kodzawodu.symbolkzis}"/>
                     </p:column>
                       <p:column width="40" style="text-align: center;">
                          <f:facet name="header">
                             <h:outputText value="akt.."/>
                         </f:facet>
-                        <p:commandButton icon="pi pi-sun" actionListener="#{umowaView.aktywujUmowe(itemumowa)}"/>
+                        <p:commandButton icon="pi pi-sun" actionListener="#{umowaView.aktywujUmowe(itemumowafunkcja)}"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
                          <f:facet name="header">
                             <h:outputText value="edy."/>
                         </f:facet>
-                        <p:commandButton icon="pi pi-pencil" actionListener="#{umowaView.edytuj(itemumowa)}" update="north, akordeon @(.formumowa), akordeon:UmowaCreateForm"/>
+                        <p:commandButton icon="pi pi-pencil" actionListener="#{umowaView.edytuj(itemumowafunkcja)}" update="north, akordeon @(.formumowa), akordeon:UmowaCreateForm"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
-                        <p:commandButton icon="pi pi-user-edit"  actionListener="#{umowaView.edytuj(itemumowa)}" onclick="PF('dialogumowatresc').show();" update="north, @(form)"/>
+                        <p:commandButton icon="pi pi-user-edit"  actionListener="#{umowaView.edytuj(itemumowafunkcja)}" onclick="PF('dialogumowatresc').show();" update="north, @(form)"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
-                        <p:commandButton icon="pi pi-trash" actionListener="#{umowaView.usunfunkcja(itemumowa)}" update="north, akordeon:UmowaListFormFunkcja">
+                        <p:commandButton icon="pi pi-trash" actionListener="#{umowaView.usunfunkcja(itemumowafunkcja)}" update="north, akordeon:UmowaListFormFunkcja">
                             <p:confirm type="popup" header="Potwierdzenie" message="Usunąć daną umowę?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
                     </p:column>
